--- a/style.css
+++ b/style.css
@@ -113,18 +113,14 @@ article h2 {
     color: #e30613;
 }
 
-/* Weerbericht specifiek */
-#weather {
-    background-color: #fff;
-    padding: 15px 20px;
+/* Weer afbeelding */
+.weather-img {
+    width: 100%;
+    max-width: 600px;
+    display: block;
+    margin: 15px 0;
     border-radius: 5px;
     box-shadow: 0px 0px 8px rgba(0,0,0,0.1);
-    margin-top: 15px;
-}
-
-#weather p {
-    margin: 8px 0;
-    font-size: 16px;
 }
 
 /* Sidebar */
